// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS/Dropdown DarkMode smoke-test 1`] = `
<div class="bg-neutral-1300 p-24">
  <select class="ui-dropdown ui-dropdown-dark">
    <option value="select"
            disabled
            selected
    >
      Select language
    </option>
    <option value="javascript">
      Javascript
    </option>
    <option value="ruby">
      Ruby
    </option>
    <option value="python">
      Python
    </option>
    <option value="java">
      Java
    </option>
  </select>
</div>
`;

exports[`CSS/Dropdown Default smoke-test 1`] = `
<select class="ui-dropdown">
  <option value="select"
          disabled
          selected
  >
    Select language
  </option>
  <option value="javascript">
    Javascript
  </option>
  <option value="ruby">
    Ruby
  </option>
  <option value="python">
    Python
  </option>
  <option value="java">
    Java
  </option>
</select>
`;

exports[`CSS/Dropdown Disabled smoke-test 1`] = `
<select class="ui-dropdown"
        disabled
>
  <option value="select"
          disabled
          selected
  >
    Select language
  </option>
  <option value="javascript">
    Javascript
  </option>
  <option value="ruby">
    Ruby
  </option>
  <option value="python">
    Python
  </option>
  <option value="java">
    Java
  </option>
</select>
`;

exports[`CSS/Dropdown Small smoke-test 1`] = `
<select class="ui-dropdown-small">
  <option value="select"
          disabled
          selected
  >
    Select language
  </option>
  <option value="javascript">
    Javascript
  </option>
  <option value="ruby">
    Ruby
  </option>
  <option value="python">
    Python
  </option>
  <option value="java">
    Java
  </option>
</select>
`;

exports[`CSS/Dropdown Synthetic smoke-test 1`] = `
<div class="ui-dropdown max-w-256"
     tabindex="0"
>
  Select language
</div>
`;
